2020-10-12  Gavin Smith  <gavinsmith0123@gmail.com>

	MathJax fixes.

	* tp/texi2any.pl (_file_header_informations): Use math2jax_process
	instead of 'math' class.  (Suggestion from Patrice.)
	(_convert_math_command): Add 'math' class to <em> elements for
	math unless we are using mathjax, in which case use
	'math2jax_process'.
	(output): Set 'jslicenses' earlier to ensure the jslicense link
	is output.
	(default_end_file): Wrap jslicense link in <small>.

2020-10-12  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove SILENT variable.

	* tp/Texinfo/Common.pm (@command_line_settables): Remove
	'SILENT' as it is not used anywhere, and sort the variables
	in alphabetical order.
	* tp/texi2any.pl: Do not set SILENT for --silent option.

2020-10-12  Gavin Smith  <gavinsmith0123@gmail.com>

	Move index entries for customization variables.

	* doc/texinfo.texi (Customization Variables and Options):
	(Invoking texi2any): Move @vindex entries to Invoking texi2any
	node.

2020-10-11  Gavin Smith  <gavinsmith0123@gmail.com>

	Wipe res_parser etc.

	* tp/tests/run_parser_all.sh: For -copy option, wipe the
	contents of res_* directories before copying files over, so
	that leftover files do not cause test failures after running
	"make copy-tests".

2020-10-11  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove texi2html conditionality in tests.
	
	* tp/tests/coverage_macro.texi: Remove some "@ifset texi2html"
	conditions.

2020-10-11  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove "not used" variables.

	* tp/Texinfo/Common.pm (@variable_settables_not_used)
	(@formats_settable, @secondary_customization_variables)
	(_customization_variable_classes): Remove.
	* doc/texinfo.texi, tp/init/chm.pm, tp/Texinfo/Convert/HTML.pm:
	Remove mention of COMPLETE_IMAGE_PATHS, SPLIT_INDEX and TOC_FILE
	variables.

2020-10-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/layout/list-of-tests: Pass -c TEXI2HTML=undef to
	some tests to avoid 'texi2any' flag being reset by normalize_config.
