@@ -225,51 +225,123 @@ my @command_line_settables = (
 my @parser_options = map {uc($_)} (keys(%default_parser_state_configuration));
 
 my @variable_string_settables = (
-  'DEBUG', 'FRAMES', 'FRAMESET_DOCTYPE', 'DOCTYPE', 'TEST', 'DUMP_TEXI',
-  'TOP_FILE', 'SHOW_MENU', 'MINI_TOC', 'USE_NODES', 'TOC_LINKS', 'SHORTEXTN',
-  'PREFIX', 'DEF_TABLE', 'L2H', 'MONOLITHIC', 'HTML_MATH',
-  'L2H_L2H', 'L2H_SKIP', 'L2H_TMP', 'L2H_FILE', 'L2H_CLEAN',
-  'L2H_HTML_VERSION', 'EXTERNAL_DIR', 'USE_ISO',
-  'VERTICAL_HEAD_NAVIGATION', 'INLINE_CONTENTS', 'NODE_FILE_EXTENSION',
-  'NO_CSS', 'INLINE_CSS_STYLE', 'USE_TITLEPAGE_FOR_TITLE',
-  'SIMPLE_MENU', 'EXTENSION', 'USE_NUMERIC_ENTITY',
-  'ENABLE_ENCODING_USE_ENTITY', 'ICONS',
-  'USE_UNIDECODE', 'DATE_IN_HEADER', 'OPEN_QUOTE_SYMBOL',
-  'CLOSE_QUOTE_SYMBOL', 'TOP_NODE_UP', 'TOP_NODE_UP_URL',
-  'TOP_NODE_FILE_TARGET', 'SECTION_NAME_IN_TITLE',
-  'SHOW_TITLE', 'WORDS_IN_PAGE',
-  'HEADER_IN_TABLE', 'USE_ACCESSKEY', 'USE_REL_REV', 'USE_LINKS',
-  'OVERVIEW_LINK_TO_TOC', 'AVOID_MENU_REDUNDANCY', 'NODE_NAME_IN_MENU',
-  'NODE_NAME_IN_INDEX', 'NO_USE_SETFILENAME', 'USE_SETFILENAME_EXTENSION',
-  'COMPLEX_FORMAT_IN_TABLE',
-  'IGNORE_BEFORE_SETFILENAME', 'IGNORE_SPACE_AFTER_BRACED_COMMAND_NAME',
-  'USE_NODE_TARGET',
-  'PROGRAM_NAME_IN_FOOTER', 'NODE_FILENAMES',
-  'EXTERNAL_CROSSREF_SPLIT', 'BODYTEXT',
-  'CSS_LINES', 'CPP_LINE_DIRECTIVES',
-  'TEXI2DVI', 'DUMP_TREE', 'MAX_MACRO_CALL_NESTING',
-  'OUTPUT_ENCODING_NAME', 'OUTPUT_PERL_ENCODING', 
-  'PACKAGE_VERSION',
-  'PACKAGE_AND_VERSION', 'PACKAGE_URL', 'PACKAGE', 'PACKAGE_NAME', 'PROGRAM',
-  'PRE_BODY_CLOSE', 'AFTER_BODY_OPEN', 'PRE_ABOUT', 'AFTER_ABOUT',
-  'EXTRA_HEAD', 'DO_ABOUT',
-  'DEFAULT_RULE', 'BIG_RULE',
-  'MENU_ENTRY_COLON', 'INDEX_ENTRY_COLON', 'MENU_SYMBOL',
-  'MAX_HEADER_LEVEL', 'CHAPTER_HEADER_LEVEL',
-  'FOOTNOTE_END_HEADER_LEVEL', 'FOOTNOTE_SEPARATE_HEADER_LEVEL',
-  'USE_UP_NODE_FOR_ELEMENT_UP',
-  'BEFORE_OVERVIEW', 'AFTER_OVERVIEW',
-  'BEFORE_TOC_LINES', 'AFTER_TOC_LINES',
-  'SORT_ELEMENT_COUNT', 'SORT_ELEMENT_COUNT_WORDS',
-  'KEEP_TOP_EXTERNAL_REF',
-  'TEXI2HTML', 'IMAGE_LINK_PREFIX',
-  'TREE_TRANSFORMATIONS', 'BASEFILENAME_LENGTH',
-  'TEXTCONTENT_COMMENT', 'XREF_USE_FLOAT_LABEL',
-  'XREF_USE_NODE_NAME_ARG', 'CHECK_HTMLXREF',
-  'TEXINFO_DTD_VERSION', 'TEXINFO_OUTPUT_FORMAT',
-  'INFO_SPECIAL_CHARS_WARNING',
-  'INDEX_SPECIAL_CHARS_WARNING', 'INFO_SPECIAL_CHARS_QUOTE',
-  'HTMLXREF', 'INFO_JS_DIR'
+'AFTER_ABOUT',
+'AFTER_BODY_OPEN',
+'AFTER_OVERVIEW',
+'AFTER_TOC_LINES',
+'AVOID_MENU_REDUNDANCY',
+'BASEFILENAME_LENGTH',
+'BEFORE_OVERVIEW',
+'BEFORE_TOC_LINES',
+'BIG_RULE',
+'BODYTEXT',
+'CHAPTER_HEADER_LEVEL',
+'CHECK_HTMLXREF',
+'CLOSE_QUOTE_SYMBOL',
+'COMPLEX_FORMAT_IN_TABLE',
+'CPP_LINE_DIRECTIVES',
+'CSS_LINES',
+'DATE_IN_HEADER',
+'DEBUG',
+'DEFAULT_RULE',
+'DEF_TABLE',
+'DO_ABOUT',
+'DOCTYPE',
+'DUMP_TEXI',
+'DUMP_TREE',
+'ENABLE_ENCODING_USE_ENTITY',
+'EXTENSION',
+'EXTERNAL_CROSSREF_SPLIT',
+'EXTERNAL_DIR',
+'EXTRA_HEAD',
+'FOOTNOTE_END_HEADER_LEVEL',
+'FOOTNOTE_SEPARATE_HEADER_LEVEL',
+'FRAMES',
+'FRAMESET_DOCTYPE',
+'HEADER_IN_TABLE',
+'HTML_MATH',
+'HTMLXREF',
+'ICONS',
+'IGNORE_BEFORE_SETFILENAME',
+'IGNORE_SPACE_AFTER_BRACED_COMMAND_NAME',
+'IMAGE_LINK_PREFIX',
+'INDEX_ENTRY_COLON',
+'INDEX_SPECIAL_CHARS_WARNING',
+'INFO_JS_DIR',
+'INFO_SPECIAL_CHARS_QUOTE',
+'INFO_SPECIAL_CHARS_WARNING',
+'INLINE_CONTENTS',
+'INLINE_CSS_STYLE',
+'KEEP_TOP_EXTERNAL_REF',
+'L2H',
+'L2H_CLEAN',
+'L2H_FILE',
+'L2H_HTML_VERSION',
+'L2H_L2H',
+'L2H_SKIP',
+'L2H_TMP',
+'MATHJAX_SCRIPT',
+'MATHJAX_SOURCE',
+'MAX_HEADER_LEVEL',
+'MAX_MACRO_CALL_NESTING',
+'MENU_ENTRY_COLON',
+'MENU_SYMBOL',
+'MINI_TOC',
+'MONOLITHIC',
+'NO_CSS',
+'NODE_FILE_EXTENSION',
+'NODE_FILENAMES',
+'NODE_NAME_IN_INDEX',
+'NODE_NAME_IN_MENU',
+'NO_USE_SETFILENAME',
+'OPEN_QUOTE_SYMBOL',
+'OUTPUT_ENCODING_NAME',
+'OUTPUT_PERL_ENCODING',
+'OVERVIEW_LINK_TO_TOC',
+'PACKAGE',
+'PACKAGE_AND_VERSION',
+'PACKAGE_NAME',
+'PACKAGE_URL',
+'PACKAGE_VERSION',
+'PRE_ABOUT',
+'PRE_BODY_CLOSE',
+'PREFIX',
+'PROGRAM',
+'PROGRAM_NAME_IN_FOOTER',
+'SECTION_NAME_IN_TITLE',
+'SHORTEXTN',
+'SHOW_MENU',
+'SHOW_TITLE',
+'SIMPLE_MENU',
+'SORT_ELEMENT_COUNT',
+'SORT_ELEMENT_COUNT_WORDS',
+'TEST',
+'TEXI2DVI',
+'TEXI2HTML',
+'TEXINFO_DTD_VERSION',
+'TEXINFO_OUTPUT_FORMAT',
+'TEXTCONTENT_COMMENT',
+'TOC_LINKS',
+'TOP_FILE',
+'TOP_NODE_FILE_TARGET',
+'TOP_NODE_UP',
+'TOP_NODE_UP_URL',
+'TREE_TRANSFORMATIONS',
+'USE_ACCESSKEY',
+'USE_ISO',
+'USE_LINKS',
+'USE_NODES',
+'USE_NODE_TARGET',
+'USE_NUMERIC_ENTITY',
+'USE_REL_REV',
+'USE_SETFILENAME_EXTENSION',
+'USE_TITLEPAGE_FOR_TITLE',
+'USE_UNIDECODE',
+'USE_UP_NODE_FOR_ELEMENT_UP',
+'VERTICAL_HEAD_NAVIGATION',
+'WORDS_IN_PAGE',
+'XREF_USE_FLOAT_LABEL',
+'XREF_USE_NODE_NAME_ARG',
 );
 
 # Not strings. 
